--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.0.2",
     "emailjs-com": "^3.2.0",
     "next": "11.0.1",
+    "next-secure-headers": "^2.2.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
