--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "emailjs-com": "^3.2.0",
     "next": "11.0.1",
     "next-secure-headers": "^2.2.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "react-vertical-timeline-component": "^3.3.3"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "postcss": "^8.2.13"
   }
 }
