--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^5.0.2",
+    "date-fns": "^2.23.0",
     "emailjs-com": "^3.2.0",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
     "next-secure-headers": "^2.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -20,7 +22,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
-    "react-vertical-timeline-component": "^3.3.3"
+    "react-vertical-timeline-component": "^3.3.3",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
