--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "date-fns": "^2.23.0",
     "emailjs-com": "^3.2.0",
     "gray-matter": "^4.0.3",
-    "next": "11.0.1",
+    "next": "^12.1.0",
     "next-secure-headers": "^2.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-vertical-timeline-component": "^3.3.3",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
