--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@next/bundle-analyzer": "^12.1.0",
     "bootstrap": "^5.0.2",
     "date-fns": "^2.23.0",
     "emailjs-com": "^3.2.0",
