--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "houghton-web-design",
+  "name": "hougthon-web-design",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@next/bundle-analyzer": "^12.1.0",
-    "bootstrap": "^5.0.2",
-    "date-fns": "^2.23.0",
-    "emailjs-com": "^3.2.0",
+    "@emailjs/browser": "^3.4.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "gray-matter": "^4.0.3",
-    "next": "^12.1.0",
+    "next": "12.1.0",
     "next-secure-headers": "^2.2.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2",
-    "react-vertical-timeline-component": "^3.3.3",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "postcss": "^8.2.13"
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
